--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -1,7 +1,6 @@
 <div class="page-container" data-controller="progress-bar" data-progress-bar-url-value="<%= bike_bike_component_url(@bike, @bike_component) %>" data-progress-bar-time-value="<%= @bike_component.time_until_check %>" data-progress-bar-distance-value="<%= @bike_component.distance_until_check %>">
 
   <div class="comp-show-page-header">
-
     <div class="back-btn-container">
       <%= link_to :back do %>
         <i class="fa-solid fa-arrow-left"></i>
@@ -10,7 +9,6 @@
     <div class="comp-show-title">
       <h1><%= @bike_component.component.name %></h1>
     </div>
-
   </div>
 
   <div class="comp-show-prog-container">
@@ -27,7 +25,6 @@
     <div class="progress">
       <div class="progress-bar" role="progressbar" data-progress-bar-target="bar" style="width: <%= @bike_component.time_progress_percentage %>%" aria-valuenow="<%= @bike_component.time_progress_percentage %>" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
-
   </div>
 
   <div class="comp-show-prog-container">
@@ -38,31 +35,38 @@
       <% else %>
         <%= @bike_component.distance_left.round %> km until check
       <% end %>
-
     </h2>
 
     <div class="progress">
       <div class="progress-bar" role="progressbar" data-progress-bar-target="distance_bar" style="width: <%= distance_percentage %>%" aria-valuenow="<%= distance_percentage %>" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
-
   </div>
 
- <button class="custom-btn green my-4" data-action="click->progress-bar#reset">I've Checked My <%= @bike_component.component.name %></button>
+  <button class="custom-btn green my-4" data-action="click->progress-bar#reset">I've Checked My <%= @bike_component.component.name %></button>
 
   <div data-controller="toggle-advice" data-toggle-advice-component-value="<%= @bike_component.component.name %>">
-  <button data-action="click->toggle-advice#fire" data-toggle-advice-target="button" class="custom-btn green my-2">Show Me How To Check My <%= @bike_component.component.name %></button>
+    <button data-action="click->toggle-advice#fire" data-toggle-advice-target="button" class="custom-btn green my-2">Show Me How To Check My <%= @bike_component.component.name %></button>
     <div data-toggle-advice-target="togglableElement" class="d-none check-advise">
-    <div class="comp-advise-image"></div>
-    <p><%= @bike_component.component.check_advice %></p>
-    <p>If you feel this component needs replacing, either replace it yourself or use our handy Bike Shop Locator tool below!</p>
-    <%= link_to "Bike Shop Locator", bike_shops_path, class: "custom-btn green"%>
+      <div class="comp-advise-image"></div>
+      <p><%= @bike_component.component.check_advice %></p>
+      <p>If you feel this component needs replacing, either replace it yourself or use our handy Bike Shop Locator tool below!</p>
+      <%= link_to "Bike Shop Locator", bike_shops_path, class: "custom-btn green"%>
     </div>
   </div>
+
+
+  <h1>All Bike Components</h1>
+
+<% default_components = ["Brake Pads", "Tires", "Chain"] %>
+
+<% default_components.each do |component_name| %>
+  <div class="bike-component">
+    <h2><%= component_name %></h2>
+    <% bike_component = @bike.bike_components.find_by(component: Component.find_by(name: component_name)) %>
+    <p><%= bike_component.try(:component).try(:description) %></p>
+    <!-- Other details of the bike component as needed -->
+  </div>
+<% end %>
+
+
 </div>
-
-
-
-
-    <%# <% @bike.bike_components.each do |bike_component| %>
-      <%# <p>Total Cumulative Time: <%= bike_component.component&.time_until_check</p> %>
-      <%# <p>Total Cumulative Distance: <%= bike_component.component&.distance_until_check</p> %>
