--- a/app/assets/stylesheets/components/_text.scss
+++ b/app/assets/stylesheets/components/_text.scss
@@ -19,3 +19,19 @@
 .fa-location-crosshairs  {
   color: $ivory !important;
 }
+
+.text-under-icon {
+  display: column;
+}
+
+.icon-text {
+  font-size: 8px;
+}
+
+.locator-button span {
+    display:block;
+}
+
+.locator-button {
+flex-shrink: 0;
+}
