Please ignore this branch

--- a/app/views/bike_shops/_list.html.erb
+++ b/app/views/bike_shops/_list.html.erb
@@ -19,7 +19,7 @@
         <p data-geolocation-target="distance">Loading distance...</p>
         <p>
           <% shop.rating.times do %>
-            <%= "⭐️" %>
+            <%= ":star:️" %>
           <% end %>
         </p>
       </div>
