Implemented feedback regarding add component

--- a/app/assets/stylesheets/components/_text.scss
+++ b/app/assets/stylesheets/components/_text.scss
@@ -29,9 +29,13 @@
 }
 
 .locator-button span {
-    display:block;
+  display:block;
 }
 
 .locator-button {
-flex-shrink: 0;
+  flex-shrink: 0;
+}
+
+.align-icon {
+  padding-right: 4px;
 }
