--- a/app/views/bike_components/new.html.erb
+++ b/app/views/bike_components/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-container">
-  <h2>New Bike Component Page</h2>
+  <h2>Add Component</h2>
 
   <div data-controller="autofill">
   <div>
