--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -8,7 +8,7 @@
       <% end %>
     </div>
     <div class="comp-show-title">
-      <h1><%= @bike_component.component.name %></h1>
+      <h1>My <%= @bike_component.component.name %></h1>
     </div>
 
   </div>
