--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class="page-container">
+  <h1>My Profile</h1>
   <div class="profile-container">
     <div class="avatar-container">
       <div class="avatar">
@@ -8,7 +9,7 @@
     <div class="profile-info-container">
       <p> <%= current_user.first_name %> <%= current_user.last_name %> </p>
       <p> <%= current_user.email %> </p>
-      <p style="font-weight: bold;">Bikes:</p>
+      <p style="font-weight: bold;">My Bikes:</p>
       <% current_user.bikes.each do |bike| %>
         <p style="margin: 0;"><%= bike.make %></p>
       <% end %>
