--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 .shop-card {
   width: 100%;
-  height: 150px;
+  height: 170px;
   margin-bottom: 16px;
   padding: 8px;
   background-color: white;
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
 }
 
 .shop-card-image {
