--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -2,7 +2,7 @@
   height: 91vh;
   width: 100%;
   padding: 24px 24px 0px 24px;
-  margin: 0;
+  margin: 0 0 75px 0;
   background: $ivory;
   color: $black;
   text-align: center;
@@ -23,7 +23,7 @@
 .avatar-container {
   width: 100%;
   height: 20vh;
-  margin: 32px 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
