--- a/app/views/bike_shops/index.html.erb
+++ b/app/views/bike_shops/index.html.erb
@@ -1,4 +1,5 @@
 <div class="page-container" data-controller="search-bar" data-search-bar-url-value="<%=bike_shops_url%>">
+  <h2>Bike Shop Locator</h2>
   <div class="search_shops">
     <%= form_with url: bike_shops_path, method: :get, class: "d-flex" do %>
       <%= text_field_tag :query,
@@ -9,7 +10,7 @@
             action: "keyup->search-bar#search"
           }
       %>
-      <button id="zoomToCurrentLocation" class="btn btn-primary"><i class="fa-solid fa-location-crosshairs"></i></button>
+      <button id="zoomToCurrentLocation" class="btn-green"><i class="fa-solid fa-location-crosshairs"></i></button>
     <% end %>
   </div>
 
@@ -25,25 +26,6 @@
 
   <div class="container_shops" data-search-bar-target="cards">
     <%= render "bike_shops/list", bike_shops: @bike_shops %>
-
-
-    <%= form_tag(search_bike_shops_path, method: "get") do %>
-      <%= text_field_tag :location, params[:location], placeholder: "Enter location" %>
-      <%= submit_tag "Search" %>
-    <% end %>
-
-    <% if @bike_shops.present? %>
-      <% @bike_shops.each do |bike_shop| %>
-        <div class="bike_shop">
-          <h2><%= bike_shop.name %></h2>
-          <p>Proximity: <%= @distance_to_location[bike_shop.id] %> miles</p>
-          <!-- Render other bike shop information here -->
-        </div>
-      <% end %>
-    <% else %>
-      <p>No bike shops found.</p>
-      <!-- Handle other cases when @bike_shops is nil or empty -->
-    <% end %>
 
   </div>
 </div>
