css to the drop down on the bike index page, fixed the nav bar (missing /div)

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -31,7 +31,7 @@
 
 .btn-green {
   background-color: $green;
-  padding: 0 16px;
+  padding: 3px 8px 0 8px;
   text-align: center;
   border: none;
 }
