--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "button";
 @import "card";
 @import "container";
+@import "dropdown";
 @import "form_legend_clear";
 @import "logo";
 @import "nav-bar";
