--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,5 +1,5 @@
 .avatar {
- height: 125px;
+ height: 180px;
  aspect-ratio: 1;
  background-color: rgba($green, 0.5);
  border-radius: 50%;
@@ -11,4 +11,8 @@
   height: 100%;
   object-fit: cover;
   box-shadow: 0px 0px 2px;
+}
+
+.fa-location-crosshairs {
+  padding: 0 !important;
 }
