--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -14,11 +14,14 @@
 }
 
 .dropdown-item {
-  background-color: $ivory;
+  background-color: $white;
   width: 100%;
   color: $black;
   font-weight: 400;
-  border-radius: 16px;
+  // border-radius: 16px;
+  // margin-bottom: 12px;
+  padding: 16px;
+  // border-bottom: 1px solid $orange;
 }
 
 .dropdown-item.active {
@@ -27,7 +30,9 @@
 }
 
 .dropdown-menu {
-  background-color: $ivory !important;
+  background-color: $white !important;
   width: 100%;
   border-radius: 16px;
+  padding: 0;
+  overflow: hidden;
 }
