--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -51,10 +51,10 @@
               <% end %>
             </div>
 
-              <div class="d-flex justify-content-between">
-                <p>Components:</p>
+              <div class="d-flex justify-content-between mb-2">
+                <p style="margin-bottom: 4px; font-size: 16px;"><span style="font-weight: 700; font-size: 24px !important;">Components:</span></p>
                 <%= link_to new_bike_bike_component_path(bike), class: "align-icon text-decoration-none" do %>
-                <i class="fa-solid fa-plus" style="margin-right: 3px;"></i>
+                <i class="fa-solid fa-plus" style="margin-right: 3px; padding-top: 3px;"></i>
                 <% end %>
               </div>
 
