--- a/app/assets/stylesheets/components/_simple_form.scss
+++ b/app/assets/stylesheets/components/_simple_form.scss
@@ -61,3 +61,14 @@ form.new_component {
     font-size: 20px;
   }
 }
+
+.form-control {
+  background-color: white;
+  border-radius: 8px;
+ border: 0.4px solid $green;
+ margin-bottom: 8px;
+}
+
+.new_component {
+  text-align: left;
+}
