--- a/app/views/bike_components/new.html.erb
+++ b/app/views/bike_components/new.html.erb
@@ -2,26 +2,29 @@
   <h2>Add Component</h2>
 
   <div data-controller="autofill">
-  <div>
-    <%= form_tag(apply_preset_bike_path(@bike), method: :post) do %>
-      <%= select_tag 'preset', options_for_select(@components.map do |component|
-        if component.custom == false
-          [component.name, component_url(component)]
-        end
-      end), data: { autofill_target: 'component' } %>
-      <br>
-      <%= submit_tag 'Apply Preset', data: { 'action' => 'click->autofill#autofill' }, class: 'custom-btn green' %>
-    <% end %>
-  </div>
+    <div>
+      <%= form_tag(apply_preset_bike_path(@bike), method: :post) do %>
 
-  <div>
-    <%= simple_form_for [@bike, @component] do |f| %>
-      <%= f.input :name, required: false, label: 'Component Name', input_html: { data: { autofill_target: 'name' } } %>
-      <%= f.input :time_until_check, required: false, label: 'Set the time between each check:', input_html: { data: { autofill_target: 'time' } } %>
-      <%= f.input :distance_until_check, required: false, label: 'Set the range between each check:', input_html: { data: { autofill_target: 'distance' } } %>
-      <%= f.input :check_advice, label: 'Add a description for how to check this component (optional):', input_html: { rows: 5, data: { autofill_target: 'description' } } %>
-      <%= f.submit value: 'Add this component to your bike', class: 'custom-btn green' %>
-    <% end %>
-  </div>
+        <%= select_tag 'preset', options_for_select(@components.map do |component|
+
+          if component.custom == false
+            [component.name, component_url(component)]
+          end
+        end), data: { autofill_target: 'component' } %>
+        
+        <%= submit_tag 'Apply Preset', data: { 'action' => 'click->autofill#autofill' }, class: 'custom-btn green' %>
+
+      <% end %>
+    </div>
+
+    <div>
+      <%= simple_form_for [@bike, @component] do |f| %>
+        <%= f.input :name, label: 'Component Name', input_html: { data: { autofill_target: 'name' } } %>
+        <%= f.input :time_until_check, label: 'Set the time between each check:', input_html: { data: { autofill_target: 'time' } } %>
+        <%= f.input :distance_until_check, label: 'Set the range between each check:', input_html: { data: { autofill_target: 'distance' } } %>
+        <%= f.input :check_advice, label: 'Add a description for how to check this component (optional):', input_html: { rows: 5, data: { autofill_target: 'description' } } %>
+        <%= f.submit value: 'Add this component to your bike', class: 'custom-btn green' %>
+      <% end %>
+    </div>
   </div>
 </div>
