--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -98,7 +98,7 @@
                       <p class="time-text"><% if bike_component.weeks_left > 1 %>
                             <p> <%= bike_component.weeks_left.to_i %> weeks</p>
                           <% elsif bike_component.weeks_left > 0 && bike_component.weeks_left <= 2 %>
-                            <p> <%= bike_component.days_left.to_i %> days </p>
+                            <p> <%= bike_component.days_left.to_i %> days left</p>
                           <% else %>
                             <p style="font-weight: bold; color: #C30010;">Check now!</p>
                           <% end %></p>
@@ -106,7 +106,7 @@
                           <% if distance_percentage < 1%>
                             <p style="font-weight: bold; color: #C30010;">Check now!</p>
                           <% else %>
-                            <p><%= bike_component.distance_left.round %> km</p>
+                            <p><%= bike_component.distance_left.round %> km left</p>
                           <% end %></p>
                     </div>
                     <div class="progress-bars-container">
