new comp pretty much done

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
         <p style="margin: 0;"><%= bike.make %></p>
       <% end %>
       <% if @strava_connected %>
-        <p style="margin-top: 16px;">Strava connected ✅ </p>
+        <p style="margin-top: 16px; font-weight: 700;">Strava connected ✅ </p>
         <%= button_to "Sync Strava rides", sync_strava_users_path, data: { turbo: false }, class: 'custom-btn' %><br />
       <% else %>
         <p style="margin-top: 32px !important;">Strava not connected ❌ </p>
