--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -38,11 +38,11 @@
 }
 
 select {
-  background-color: $orange;
+  background-color: $white;
   border-radius: 8px;
   width: 45vw;
   padding: 8px 16px;
-  color: $ivory;
+  color: $black;
   font-weight: 700;
   margin: 16px 0 0 0;
 }
