--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -22,8 +22,8 @@
 
 .avatar-container {
   width: 100%;
-  height: 20vh;
-  margin: 0;
+  height: 180px;
+  margin: 16px 0;
   display: flex;
   justify-content: center;
   align-items: center;
