formatted rear tyre check advice

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
                 hint: "Leave it blank if you don't want to change it",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :confirm_password, placeholder: 'Confirm password', label:false,
+    <%= f.input :confirm_password, placeholder: 'Confirm new password', label:false,
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password, placeholder: 'Current password', label:false,
