--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -58,7 +58,7 @@
   <button data-action="click->toggle-advice#fire" data-toggle-advice-target="button" class="custom-btn green my-2">Show Me How To Check My <%= @bike_component.component.name %></button>
     <div data-toggle-advice-target="togglableElement" class="d-none check-advise">
     <div class="comp-advise-image"></div>
-    <p><%= @bike_component.component.check_advice %></p>
+    <p><%= raw @bike_component.component.check_advice %></p>
     <p style="margin-bottom: 16px;">If you feel this component needs replacing, either replace it yourself or use our handy Bike Shop Locator tool below!</p>
     <%= link_to "Bike Shop Locator", bike_shops_path, class: "custom-btn green"%>
     </div>
