started the fixes

--- a/app/assets/stylesheets/components/_nav-bar.scss
+++ b/app/assets/stylesheets/components/_nav-bar.scss
@@ -5,7 +5,7 @@
   bottom: 0px;
   background-color: $orange;
   color: $ivory;
-  padding: 0 24px;
+  padding: 0;
   margin: 0;
   display: flex;
   justify-content: space-around;
