--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "container";
 @import "dropdown";
 @import "form_legend_clear";
+@import "hr";
 @import "logo";
 @import "nav-bar";
 @import "nav-pills";
