--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -78,6 +78,9 @@
   width: 100%;
   aspect-ratio: 1;
 }
+.img-thumbnail {
+  border-radius: 16px;
+}
 
 .card-image-info-wrapper {
   // padding: 10px 13px;
