--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -109,8 +109,16 @@
   height: auto;
   margin: 48px 0 0 0;
   h4 {
-    margin-bottom: 32px;
+    // margin-bottom: 32px;
   }
+}
+
+.comp-show-img-text {
+  width:100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 32px;
 }
 
 .check-advise {
