--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -53,10 +53,12 @@ option {
 }
 
 .advise-drop {
-  background-color: white;
-  color: $black;
-  padding: 8px;
-  border-radius: 8px;
-  box-shadow: 0 0 1px $green;
-  margin-top: 16px;
+    background-color: white;
+    color: $black;
+    padding: 16px 16px 16px 32px;
+    border-radius: 8px;
+    box-shadow: 0 0 1px $green;
+    margin-top: 16px;
+    text-align: start;
+
 }
