--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -15,9 +15,14 @@
 
   <div class="comp-show-prog-container">
 
-    <h4 style="text-align: left;">
-      Your <%= @bike_component.component.name.downcase %> is set to be checked  every <span style="font-weight: bold;"><%= @bike_component.component.time_until_check %> weeks</span> or every <span style="font-weight: bold;"><%= @bike_component.distance_until_check.round %> kms</span>
-    </h4>
+    <div class="comp-show-img-text">
+      <div class="component-card-image" style="width: 200px !important">
+        <%= cl_image_tag(@bike_component.component.icon.key, class:"bike-component-image") %>
+      </div>
+      <p style="text-align: left; font-size: 18px; margin: 0; padding-left: 16px;">
+        Your <%= @bike_component.component.name.downcase %> is set to be checked  every <span style="font-weight: bold;"><%= @bike_component.component.time_until_check %> weeks</span> or every <span style="font-weight: bold;"><%= @bike_component.distance_until_check.round %> kms</span>
+      </p>
+    </div>
 
     <div class="comp-show-mini-card">
       <h2 data-progress-bar-target="time">
@@ -26,7 +31,7 @@
         <% elsif @bike_component.weeks_left > 0 && @bike_component.weeks_left <= 2 %>
           <%= @bike_component.days_left.to_i %> days until check
         <% else %>
-          Check now!
+          <span style="color: #D1001F">Check now!</span>
         <% end %>
       </h2>
 
@@ -56,7 +61,15 @@
 
   <details>
     <summary style="font-weight: 700; font-size: 16px;">How to check my chain</summary>
-    <p class="advise-drop"><%= raw @bike_component.component.check_advice %></p>
+    <div>
+    <% if @bike_component.component.check_img.attached? %>
+      <%= cl_image_tag @bike_component.component.check_img.key, class:"img-thumbnail"%>
+    <% else %>
+      <%= image_tag "https://www.rei.com/dam/content_022717_0222_bike_basics_inspection_lg.jpg", :class => "img-thumbnail" %>
+    <% end %>
+    </div>
+    <p><%= raw @bike_component.component.check_advice %></p>
   </details>
+  <p style="margin-top: 24px;">If you feel this <%= @bike_component.component.name %> needs replacing, either replace it yourself or if you would like some expert help, find local Bike Shops with our tool below!</p>
 
 </div>
