--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -39,9 +39,9 @@
                 <h2>My Bike</h2>
               <% end %>
               <div class="bike-options d-flex">
-                <%= link_to edit_bike_path(bike), class: "text-decoration-none pen-icon" do %>
-                  <i class="fa-solid fa-pen" style="margin-right: 3px;"></i>
-                <% end %>
+              <%= link_to edit_bike_path(bike), class: "text-decoration-none pen-icon" do %>
+                <i class="fa-solid fa-pen" style="margin-right: 3px;"></i>
+              <% end %>
               </div>
             </div>
 
@@ -53,12 +53,12 @@
               <% end %>
             </div>
 
-              <div class="d-flex justify-content-between mb-2">
-                <p style="margin-bottom: 4px; font-size: 16px;"><span style="font-weight: 400; font-size: 20px !important;">Components:</span></p>
-                <%= link_to new_bike_bike_component_path(bike), class: "align-icon text-decoration-none" do %>
+            <div class="d-flex justify-content-between mb-2">
+              <p style="margin-bottom: 4px; font-size: 16px;"><span style="font-weight: 400; font-size: 20px !important;">Components:</span></p>
+              <%= link_to new_bike_bike_component_path(bike), class: "align-icon text-decoration-none" do %>
                 <i class="fa-solid fa-plus" style="margin-right: 3px; padding-top: 3px;"></i>
-                <% end %>
-              </div>
+              <% end %>
+            </div>
 
             <% bike.bike_components.sort_by_time_until_check.each do |bike_component| %>
               <%= link_to bike_bike_component_path(bike, bike_component) do %>
@@ -67,73 +67,74 @@
                   <div class="card-image-info-wrapper">
                     <div class="component-card-image">
                       <% if bike_component.component.icon.present? %>
-                      <%= cl_image_tag(bike_component.component.icon.key, class:"bike-component-image") %>
+                        <%= cl_image_tag(bike_component.component.icon.key, class:"bike-component-image") %>
                       <% else %>
-                      <%= image_tag "custom-component-icon.png", class:"bike-component-image" %>
+                        <%= image_tag "custom-component-icon.png", class:"bike-component-image" %>
                       <% end %>
                     </div>
 
                     <div class="progress-info">
-
-                      <div class="progress-bar-text">
-                        <% distance_percentage = bike_component.distance_progress_percentage %>
-                          <% if distance_percentage < 1 || bike_component.weeks_left <= 0 %>
-                              <p>Check now! <span style="color: red">⚠</span></p>
-                          <% elsif bike_component.weeks_left > 2 %>
-                            <p><%= bike_component.weeks_left.to_i %> weeks until check </p>
-                          <% elsif bike_component.weeks_left > 0 && bike_component.weeks_left <= 2 %>
-                            <p><%= bike_component.days_left.to_i %> days until check </p>
-                          <% else %>
-                            <p><%= bike_component.distance_left.round %> km until check</p>
-                          <% end %>
-                        </div>
-                      </div>
-
-
-                     <div class="component-name-and-delete">
+                       <div class="component-name-and-delete">
                         <h2 style="color: #0D5D56;"> <%= bike_component.component.name %> </h2>
                         <div>
                           <button class="component-delete-button" data-action="click->delete-check#delete_component"><i class="fa-solid fa-xmark"></i></button>
                         </div>
                       </div>
-                  </div>
+
+                      <div class="progress-bar-text">
+                          <p>Check every
+                            <% if bike_component.component.time_until_check > 1 %>
+                              <%= bike_component.component.time_until_check %> weeks
+                            <% else %>
+                              week
+                            <% end %>
+                              or <br /> every <%= bike_component.component.distance_until_check.round %> kilometers</p>
+                      </div>
+                      </div>
+                    </div>
+
+
+
+
 
                   <div class="bars">
                     <div class="bar-names">
-                      <p class="time-text"><% if bike_component.weeks_left > 1 %>
-                            <p> <%= bike_component.weeks_left.to_i %> weeks</p>
-                          <% elsif bike_component.weeks_left > 0 && bike_component.weeks_left <= 2 %>
-                            <p> <%= bike_component.days_left.to_i %> days left</p>
-                          <% else %>
-                            <p style="font-weight: bold; color: #C30010;">Check now!</p>
-                          <% end %></p>
-                      <p class="distance-text"><% distance_percentage = bike_component.distance_progress_percentage %>
-                          <% if distance_percentage < 1%>
-                            <p style="font-weight: bold; color: #C30010;">Check now!</p>
-                          <% else %>
-                            <p><%= bike_component.distance_left.round %> km left</p>
-                          <% end %></p>
+                      <p class="time-text">
+                        <% if bike_component.weeks_left > 1 %>
+                          <p> <%= bike_component.weeks_left.to_i %> weeks</p>
+                        <% elsif bike_component.weeks_left > 0 && bike_component.weeks_left <= 2 %>
+                          <p> <%= bike_component.days_left.to_i %> days left</p>
+                        <% else %>
+                          <p style="font-weight: bold; color: #C30010;">Check now!</p>
+                        <% end %>
+                      </p>
+                      <p class="distance-text">
+                        <% distance_percentage = bike_component.distance_progress_percentage %>
+                        <% if distance_percentage < 1%>
+                          <p style="font-weight: bold; color: #C30010;">Check now!</p>
+                        <% else %>
+                          <p><%= bike_component.distance_left.round %> km left</p>
+                        <% end %>
+                      </p>
                     </div>
                     <div class="progress-bars-container">
                       <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: <%= bike_component.time_progress_percentage %>%" aria-valuenow="<%= bike_component.time_progress_percentage %>" aria-valuemin="0" aria-valuemax="100">
                         </div>
                       </div>
-
                       <div class="progress">
                         <div class="progress-bar" role="progressbar" data-progress-bar-target="distance_bar" style="width: <%= distance_percentage %>%" aria-valuenow="<%= distance_percentage %>" aria-valuemin="0" aria-valuemax="100">
                         </div>
                       </div>
-
+                      
                     </div>
                   </div>
-              </div>
+                </div>
+              <% end %>
             <% end %>
-          <% end %>
-
-            </div>
           </div>
-        <% end %>
+        </div>
+      <% end %>
     </div>
 
 
