--- a/app/views/bike_components/new.html.erb
+++ b/app/views/bike_components/new.html.erb
@@ -23,11 +23,15 @@
     <div>
       <br>
       <%= simple_form_for [@bike, @component] do |f| %>
+        <div>
         <%= f.input :name, label: 'Component Name', input_html: { data: { autofill_target: 'name' } } %>
         <%= f.input :time_until_check, label: 'How many weeks between checks?', input_html: { data: { autofill_target: 'time' } } %>
         <%= f.input :distance_until_check, label: 'How many kilometers between checks?', input_html: { data: { autofill_target: 'distance' } } %>
         <%= f.input :check_advice, label: 'Add a description for how to check this component (optional):', input_html: { rows: 5, data: { autofill_target: 'description' } } %>
-        <%= f.submit value: 'Add this component to your bike', class: 'custom-btn' %>
+        </div>
+        <div class="d-flex align-items-center justify-content-center">
+          <%= f.submit value: '+ Add', class: 'custom-btn button-center' %>
+        </div>
       <% end %>
     </div>
   </div>
