--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 .shop-card {
   width: 100%;
-  height: 165px;
+  height: 115px;
   margin-bottom: 16px;
   padding: 8px;
   background-color: white;
@@ -10,6 +10,22 @@
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
+
+  h4 {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 0;
+    margin-bottom: -3px;
+  }
+
+  .shop-card-small-text {
+    font-size: 13px;
+    i {
+      margin-right: 3px;
+      font-size: 12px;
+      width: 18px;
+    }
+  }
 }
 
 .shop-card-image {
