--- a/app/views/bike_shops/_list.html.erb
+++ b/app/views/bike_shops/_list.html.erb
@@ -12,16 +12,24 @@
         <% end %>
       </div>
       <div class="shop-card-info">
-        <h4> <%= shop.name %> </h4>
-        <p> <%= shop.location %> </p>
-        <p> <%= shop.website %> </p>
-        <p> <%= shop.phone_number %> </p>
-        <p data-geolocation-target="distance">Loading distance...</p>
-         <p>
-          <% shop.rating.times do %>
-            <%= "⭐️" %>
-          <% end %>
-        </p>
+        <div class="d-flex justify-content-between align-items-center">
+          <h4> <%= shop.name %> </h4>
+          <p><span class="shop-card-small-text">
+            <% shop.rating.times do %>
+              <%= "⭐️" %>
+            <% end %>
+          </span></p>
+        </div>
+        <div class="shop-card-details mt-1">
+          <p><span class="shop-card-small-text"><i class="fas fa-location"></i><%= shop.location %></span></p>
+          <p><span class="shop-card-small-text"><i class="fa-solid fa-globe"></i><%= shop.website %></span></p>
+          <div class="d-flex justify-content-between">
+            <p><span class="shop-card-small-text"><i class="fa-solid fa-phone"></i><%= shop.phone_number %></span></p>
+            <p data-geolocation-target="distance"><span class="shop-card-small-text">Loading distance...</span></p>
+
+          </div>
+        </div>
+
       </div>
     </div>
   <% end %>
