--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -24,32 +24,7 @@
   </div>
 
   <div class="container_shops">
-      <% if @bike_shops.any? %>
-        <% @bike_shops.each do |shop| %>
-          <div class="shop-card">
-            <div class="shop-card-image">
-              <% if shop.photo.attached? %>
-                <%= cl_image_tag shop.photo.key, class:"shop-img" %>
-              <% else %>
-                <%= "No image" %>
-              <% end %>
-            </div>
-            <div class="shop-card-info">
-              <h4> <%= shop.name %> </h4>
-              <p> <%= shop.location %> </p>
-              <p> <%= shop.website %> </p>
-              <p> <%= shop.phone_number %> </p>
-              <p>
-                <% shop.rating.times do %>
-                  <%= "⭐️" %>
-                <% end %>
-              </p>
-            </div>
-          </div>
-        <% end %>
-      <% else %>
-        <em>Sorry, no shops found.</em>
-      <% end %>
+    <%= render 'bike_shops/list', bike_shops: @bike_shops %>
   </div>
 
 </div>
