--- a/app/views/bike_components/new.html.erb
+++ b/app/views/bike_components/new.html.erb
@@ -30,7 +30,7 @@
         <%= f.input :check_advice, label: 'Add a description for how to check this component (optional):', input_html: { rows: 5, data: { autofill_target: 'description' } } %>
         </div>
         <div class="d-flex align-items-center justify-content-center">
-          <%= f.submit value: '+ Add', class: 'custom-btn button-center' %>
+          <%= f.submit value: '+ Add', class: 'custom-btn green button-center' %>
         </div>
       <% end %>
     </div>
